--- a/To Do app/index.html
+++ b/To Do app/index.html
@@ -2,10 +2,10 @@
 <html lang="en" class="h-full">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="src/assets/to-do-bg.png" />
     <!-- <link rel="stylesheet" href="https://fonts.google.com/share?selection.family=Inconsolata"> -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
+    <title>Activities List</title>
   </head>
   <body class="h-full">
     <div id="root" class="h-full" ></div>
